Random user Api

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -26,15 +26,13 @@
         <p class="user-value">Evans Che</p>
         <div class="values-list">
           <!-- single icon -->
-          <button class="icon" data-label="name">
+          <button class="icon active" data-label="name">
             <span class="far fa-user"></span>
           </button>
           <!-- end of single icon -->
-          <!-- single icon -->
           <button class="icon" data-label="email">
             <span class="far fa-envelope-open"></span>
           </button>
-          <!-- end of single icon -->
           <!-- single icon -->
           <button class="icon" data-label="age">
             <span class="far fa-calendar-times"></span>
@@ -46,12 +44,12 @@
           </button>
           <!-- end of single icon -->
           <!-- single icon -->
-          <button class="icon" data-label="phone">
+          <button class="icon active" data-label="phone">
             <span class="fas fa-phone"></span>
           </button>
           <!-- end of single icon -->
           <!-- single icon -->
-          <button class="icon" data-label="password">
+          <button class="icon active" data-label="password">
             <span class="fas fa-user-lock"></span>
           </button>
           <!-- end of single icon -->
@@ -59,6 +57,7 @@
         <button class="btn" type="button">random user</button>
       </div>
     </div>
+
     <script type="module" src="./app.js"></script>
   </body>
 </html>
