--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
           </button>
           <!-- end of single icon -->
           <!-- single icon -->
-          <button class="icon active" data-label="phone">
+          <button class="icon" data-label="phone">
             <span class="fas fa-phone"></span>
           </button>
           <!-- end of single icon -->
           <!-- single icon -->
-          <button class="icon active" data-label="password">
+          <button class="icon" data-label="password">
             <span class="fas fa-user-lock"></span>
           </button>
           <!-- end of single icon -->
